feat(simple-authentication): add the management of CSRF token for the simple authentication (#860)
(cherry picked from commit 124ea43c1c302d7ae2b2d40757d650931e203b6c)