@@ -11,7 +11,7 @@ import io.camunda.common.auth.Product;
 import io.camunda.common.auth.SelfManagedAuthentication;
 import io.camunda.zeebe.spring.client.configuration.AuthenticationConfiguration;
 import java.time.Instant;
-import java.util.Map;
+import java.util.Collections;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
@@ -49,7 +49,7 @@ public class AuthenticationConfigurationOidcTest {
                             .put("expires_in", 300))));
     assertThat(authentication.getTokenHeader(Product.OPERATE))
         .isNotNull()
-        .isEqualTo(Map.of("Authorization", "Bearer " + accessToken));
+        .isEqualTo(Collections.singletonMap("Authorization", "Bearer " + accessToken));
     verify(
         postRequestedFor(urlEqualTo("/auth-server/protocol/openid-connect/token"))
             .withHeader("Content-Type", equalTo("application/x-www-form-urlencoded")));
@@ -68,7 +68,7 @@ public class AuthenticationConfigurationOidcTest {
                             .put("expires_in", 300))));
     assertThat(authentication.getTokenHeader(Product.TASKLIST))
         .isNotNull()
-        .isEqualTo(Map.of("Authorization", "Bearer " + accessToken));
+        .isEqualTo(Collections.singletonMap("Authorization", "Bearer " + accessToken));
     verify(
         postRequestedFor(urlEqualTo("/auth-server/protocol/openid-connect/token"))
             .withHeader("Content-Type", equalTo("application/x-www-form-urlencoded")));
@@ -87,7 +87,7 @@ public class AuthenticationConfigurationOidcTest {
                             .put("expires_in", 300))));
     assertThat(authentication.getTokenHeader(Product.OPTIMIZE))
         .isNotNull()
-        .isEqualTo(Map.of("Authorization", "Bearer " + accessToken));
+        .isEqualTo(Collections.singletonMap("Authorization", "Bearer " + accessToken));
     verify(
         postRequestedFor(urlEqualTo("/auth-server/protocol/openid-connect/token"))
             .withHeader("Content-Type", equalTo("application/x-www-form-urlencoded")));
@@ -106,7 +106,7 @@ public class AuthenticationConfigurationOidcTest {
                             .put("expires_in", 300))));
     assertThat(authentication.getTokenHeader(Product.ZEEBE))
         .isNotNull()
-        .isEqualTo(Map.of("Authorization", "Bearer " + accessToken));
+        .isEqualTo(Collections.singletonMap("Authorization", "Bearer " + accessToken));
     verify(
         postRequestedFor(urlEqualTo("/auth-server/protocol/openid-connect/token"))
             .withHeader("Content-Type", equalTo("application/x-www-form-urlencoded")));
